[package]
name = "rotating-file"
version = "0.1.0"
authors = ["Patrick Wadström <patrick.wadstrom@elvaco.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.1", features = [ "fs", "io-util" ] }
flate2 = "1.0"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.1", features = [ "fs", "io-util", "rt", "macros" ] }
